force-app/main/default/objects/PWChrono_Onboarding_Task__c/PWChrono_Onboarding_Task__c.object-meta.xml
<CustomObject>
    <label>PWChrono Onboarding Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PWChrono Onboarding Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>