force-app/main/default/objects/PWChrono_Onboarding_Task__c/fields/Assigned_Tos__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Tos</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Onboarding Task Assigned Tos</relationshipLabel>
    <relationshipName>Onboarding_Task_Assigned_Tos</relationshipName>
    <type>Lookup</type>
</CustomField>