force-app/main/default/objects/PWChrono_Onboarding_Task__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Onboarding Task Portal Users</relationshipLabel>
    <relationshipName>Onboarding_Task_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>